# weedless

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml  codeql-analysis.yml
example/: CMakeLists.txt  example.c  hooks.c  hooks.json  value.c  value.h
weedless/: CMakeLists.txt  weedless.cpp
weedless/include/: config.h  install.h  macho.h  uleb.h
weedless/lib/: config.cpp  install.cpp  macho.cpp
